[gd_scene load_steps=8 format=4 uid="uid://dwyof0b6x23yt"]

[ext_resource type="Texture2D" uid="uid://dlsmn8ey3q0rp" path="res://Images/Placeholder_tileset.png" id="1_tqlm4"]
[ext_resource type="Script" path="res://Scripts/single_lane.gd" id="2_bsmyo"]
[ext_resource type="PackedScene" path="res://scenes/checkpoint.tscn" id="3_747ft"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_w2d7j"]
vertices = PackedVector2Array(15, 0, 0, 7.5, -15, 0, 0, -7.5)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(0, -7.5, -15, 0, 0, 7.5, 15, 0)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_dw6c4"]
vertices = PackedVector2Array(15, 0, 0, 7.5, -15, 0, 0, -7.5)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(0, -7.5, -15, 0, 0, 7.5, 15, 0)])
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sym5r"]
texture = ExtResource("1_tqlm4")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -8)
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -7.5, -15, 0, 0, 7.5, 15, 0)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -8)
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -7.5, -15, 0, 0, 7.5, 15, 0)
0:1/0 = 0
0:1/0/texture_origin = Vector2i(0, -8)
0:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_w2d7j")
1:1/0 = 0
1:1/0/texture_origin = Vector2i(0, -8)
1:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_dw6c4")

[sub_resource type="TileSet" id="TileSet_c7pfh"]
tile_shape = 1
tile_size = Vector2i(30, 15)
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 3
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_sym5r")

[node name="SingleLane" type="TileMapLayer"]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAMADEAAAAAAAEAAAANADAAAAAAAAEAAAANAC8AAAAAAAEAAAAOAC4AAAAAAAEAAAAOAC0AAAAAAAEAAAAPACwAAAAAAAEAAAAPACsAAAAAAAEAAAAQACoAAAAAAAEAAAAQACkAAAAAAAEAAAARACgAAAAAAAEAAAARACcAAAAAAAEAAAASACYAAAAAAAEAAAASACUAAAAAAAEAAAATACQAAAAAAAEAAAANADIAAAAAAAEAAAANADMAAAAAAAEAAAAOADIAAAABAAEAAAAOADEAAAABAAEAAAAPADAAAAAAAAEAAAAPAC8AAAAAAAEAAAAQAC4AAAAAAAEAAAAPAC0AAAAAAAEAAAAQACwAAAAAAAEAAAAQAC0AAAAAAAEAAAATACUAAAAAAAEAAAATACYAAAAAAAEAAAATACcAAAAAAAEAAAATACgAAAAAAAEAAAASACkAAAAAAAEAAAASACoAAAAAAAEAAAARACsAAAAAAAEAAAARACwAAAAAAAEAAAAPAC4AAAAAAAEAAAAOAC8AAAAAAAEAAAAOADAAAAAAAAEAAAANADEAAAAAAAEAAAAQACsAAAAAAAEAAAARACoAAAAAAAEAAAARACkAAAAAAAEAAAASACgAAAAAAAEAAAASACcAAAAAAAEAAAAUACYAAAABAAEAAAATACMAAAAAAAEAAAAUACIAAAAAAAEAAAAUACEAAAAAAAEAAAAVACAAAAAAAAEAAAAVAB8AAAAAAAEAAAAWAB4AAAAAAAEAAAAWAB0AAAAAAAEAAAAXABwAAAAAAAEAAAAXABsAAAAAAAEAAAAYABoAAAAAAAEAAAAYABkAAAAAAAEAAAAZABgAAAAAAAEAAAAZABcAAAAAAAEAAAAUACUAAAABAAEAAAAVACQAAAAAAAEAAAAVACMAAAAAAAEAAAAWACIAAAAAAAEAAAAWACEAAAAAAAEAAAAXACAAAAAAAAEAAAAXAB8AAAAAAAEAAAAYAB4AAAAAAAEAAAAYAB0AAAAAAAEAAAAZABwAAAAAAAEAAAAZABsAAAAAAAEAAAAaABoAAAABAAEAAAAUACQAAAAAAAEAAAAUACMAAAAAAAEAAAAVACIAAAAAAAEAAAAYABsAAAAAAAEAAAAZABoAAAAAAAEAAAAZABkAAAAAAAEAAAAaABgAAAAAAAEAAAAYABwAAAAAAAEAAAAXAB0AAAAAAAEAAAAXAB4AAAAAAAEAAAAWAB8AAAAAAAEAAAAWACAAAAAAAAEAAAAVACEAAAAAAAEAAAANADQAAAAAAAEAAAAMADUAAAAAAAEAAAAMADYAAAAAAAEAAAALADcAAAAAAAEAAAALADgAAAAAAAEAAAAMADIAAAAAAAEAAAALADMAAAAAAAEAAAALADQAAAAAAAEAAAAKADUAAAAAAAEAAAAKADYAAAAAAAEAAAAJADcAAAAAAAEAAAAJADgAAAAAAAEAAAAIADkAAAAAAAEAAAAIADoAAAAAAAEAAAAHADsAAAAAAAAAAAAIADwAAAAAAAEAAAAHADwAAAAAAAAAAAAGAD0AAAAAAAEAAAAGAD4AAAAAAAEAAAAMADMAAAAAAAEAAAAMADQAAAAAAAEAAAALADUAAAAAAAEAAAALADYAAAAAAAEAAAAKADcAAAAAAAEAAAAKADgAAAAAAAEAAAAJADkAAAAAAAEAAAAJADoAAAAAAAEAAAAIADsAAAAAAAEAAAAHAD0AAAAAAAEAAAAHAD4AAAAAAAEAAAAGAD8AAAAAAAEAAAAHAEAAAAAAAAEAAAAHAD8AAAAAAAEAAAAIAD0AAAABAAEAAAAJADwAAAAAAAEAAAAJADsAAAAAAAEAAAAKADoAAAAAAAEAAAAKADkAAAAAAAEAAAAHAEEAAAAAAAEAAAAIAEAAAAAAAAEAAAAJAD4AAAABAAEAAAAJAD0AAAAAAAEAAAAKADwAAAAAAAEAAAAKADsAAAAAAAEAAAALADoAAAAAAAEAAAALADkAAAAAAAEAAAAMADgAAAAAAAEAAAANADgAAAAAAAEAAAANADcAAAAAAAEAAAAOADYAAAAAAAEAAAAOADUAAAAAAAEAAAAMADcAAAAAAAEAAAANADYAAAAAAAEAAAANADUAAAAAAAEAAAAOADQAAAAAAAEAAAAOADMAAAABAAEAAAAPADIAAAABAAEAAAAPADEAAAAAAAEAAAAQADAAAAAAAAEAAAASACwAAAAAAAEAAAASACsAAAAAAAEAAAARAC0AAAAAAAEAAAARAC4AAAAAAAEAAAAQAC8AAAAAAAEAAAATACoAAAAAAAEAAAATACkAAAAAAAEAAAAUACgAAAAAAAEAAAAUACcAAAABAAEAAAAVACYAAAABAAEAAAAVACUAAAAAAAEAAAAWACQAAAAAAAEAAAAWACMAAAAAAAEAAAAXACIAAAAAAAEAAAAXACEAAAAAAAEAAAAYACAAAAAAAAEAAAAYAB8AAAAAAAEAAAAZAB4AAAAAAAEAAAAZAB0AAAAAAAEAAAAaABsAAAABAAEAAAAbABoAAAABAAEAAAAIAEIAAAAAAAEAAAAIAEEAAAAAAAEAAAAKAD0AAAAAAAEAAAALADwAAAAAAAEAAAAKAD4AAAAAAAEAAAAJAD8AAAAAAAEAAAAJAEAAAAAAAAEAAAALADsAAAAAAAEAAAAMADoAAAAAAAEAAAAMADkAAAAAAAEAAAAPADQAAAAAAAEAAAAPADMAAAAAAAEAAAARAC8AAAAAAAEAAAAQADIAAAAAAAEAAAAQADEAAAAAAAEAAAARADAAAAAAAAEAAAASAC4AAAAAAAEAAAATACsAAAAAAAEAAAATACwAAAAAAAEAAAASAC0AAAAAAAEAAAAUACoAAAAAAAEAAAAUACkAAAAAAAEAAAAVACgAAAAAAAEAAAAVACcAAAAAAAEAAAAWACUAAAAAAAEAAAAXACQAAAAAAAEAAAAXACMAAAAAAAEAAAAYACIAAAAAAAEAAAAYACEAAAAAAAEAAAAZACAAAAAAAAEAAAAZAB8AAAAAAAEAAAAaAB4AAAAAAAEAAAAaAB0AAAAAAAEAAAAbABwAAAAAAAEAAAAbABsAAAAAAAEAAAAWACYAAAAAAAEAAAAIAD4AAAABAAEAAAAIAD8AAAABAAEAAAAIAEMAAAAAAAEAAAAJAEIAAAAAAAEAAAAJAEEAAAAAAAAAAAAKAEAAAAAAAAAAAAAKAD8AAAAAAAEAAAALAD4AAAAAAAEAAAALAD0AAAAAAAEAAAAMADwAAAAAAAEAAAAMADsAAAAAAAEAAAANADoAAAAAAAEAAAAOADgAAAAAAAEAAAAOADcAAAAAAAEAAAAPADYAAAAAAAEAAAANADkAAAAAAAEAAAAPADUAAAAAAAEAAAAQADQAAAAAAAEAAAAQADMAAAAAAAEAAAARADIAAAAAAAEAAAARADEAAAAAAAEAAAASADAAAAAAAAEAAAASAC8AAAAAAAEAAAATAC4AAAAAAAEAAAATAC0AAAAAAAEAAAAUACwAAAAAAAEAAAAUACsAAAAAAAEAAAAVACoAAAAAAAEAAAAVACkAAAAAAAEAAAAWACgAAAAAAAEAAAAWACcAAAAAAAEAAAAXACYAAAAAAAEAAAAXACUAAAAAAAEAAAAYACQAAAAAAAEAAAAYACMAAAAAAAEAAAAZACIAAAAAAAEAAAAZACEAAAAAAAEAAAAaACAAAAAAAAEAAAAaAB8AAAAAAAEAAAAbAB4AAAAAAAEAAAAbAB0AAAAAAAEAAAAcABwAAAAAAAEAAAAaABwAAAAAAAEAAAAaABYAAAAAAAEAAAAaABUAAAAAAAEAAAAbABQAAAAAAAEAAAAbABMAAAAAAAEAAAAcABIAAAAAAAEAAAAcABEAAAAAAAEAAAAdABAAAAAAAAEAAAAdAA8AAAAAAAEAAAAeAA4AAAAAAAEAAAAeAA0AAAAAAAEAAAAfAAwAAAAAAAAAAAAfAAsAAAAAAAAAAAAgAAoAAAAAAAEAAAAgAAkAAAAAAAEAAAAhAAgAAAAAAAEAAAAhAAcAAAAAAAEAAAAcABsAAAAAAAEAAAAdABoAAAAAAAEAAAAdABkAAAAAAAEAAAAdABgAAAAAAAEAAAAeABgAAAAAAAEAAAAeABcAAAAAAAEAAAAeABYAAAAAAAEAAAAeABUAAAAAAAEAAAAfABQAAAAAAAEAAAAfABMAAAAAAAEAAAAgABIAAAAAAAEAAAAgABEAAAAAAAEAAAAhABAAAAAAAAEAAAAhAA8AAAAAAAEAAAAiAA4AAAAAAAEAAAAiAA0AAAAAAAEAAAAjAAwAAAAAAAEAAAAfABYAAAAAAAEAAAAfABUAAAAAAAEAAAAgABQAAAAAAAEAAAAgABMAAAAAAAEAAAAhABIAAAAAAAEAAAAhABEAAAAAAAAAAAAiABAAAAAAAAAAAAAiAA8AAAAAAAEAAAAjAA4AAAAAAAEAAAAjAA0AAAAAAAEAAAAiAAgAAAAAAAEAAAAiAAkAAAAAAAEAAAAjAAoAAAAAAAEAAAAjAAsAAAAAAAEAAAAkAAwAAAAAAAEAAAAhAAkAAAAAAAEAAAAhAAoAAAAAAAEAAAAgAAsAAAAAAAEAAAAgAAwAAAAAAAEAAAAfAA0AAAAAAAEAAAAfAA4AAAAAAAEAAAAeAA8AAAAAAAEAAAAeABAAAAAAAAEAAAAdABEAAAAAAAEAAAAdABIAAAAAAAEAAAAdABMAAAAAAAEAAAAdABQAAAAAAAEAAAAcABUAAAAAAAEAAAAcABYAAAAAAAEAAAAbABcAAAAAAAEAAAAbABgAAAAAAAEAAAAaABcAAAAAAAEAAAAbABYAAAAAAAEAAAAbABUAAAAAAAEAAAAcABQAAAAAAAEAAAAcABMAAAAAAAEAAAAdABUAAAAAAAEAAAAdABYAAAAAAAEAAAAcABcAAAAAAAEAAAAcABgAAAAAAAEAAAAcABkAAAAAAAEAAAAcABoAAAAAAAEAAAAbABkAAAAAAAEAAAAdABcAAAAAAAEAAAAeABQAAAAAAAEAAAAeABMAAAAAAAEAAAAfABIAAAAAAAEAAAAfABEAAAAAAAEAAAAfABAAAAAAAAEAAAAfAA8AAAAAAAEAAAAgAA4AAAABAAEAAAAgAA0AAAABAAEAAAAhAAwAAAAAAAEAAAAhAAsAAAAAAAEAAAAiAAoAAAAAAAEAAAAiAAsAAAAAAAEAAAAiAAwAAAAAAAEAAAAgAA8AAAABAAEAAAAhAA4AAAABAAEAAAAhAA0AAAAAAAEAAAAgABAAAAAAAAEAAAAeABEAAAAAAAEAAAAeABIAAAAAAAEAAAAaABkAAAABAAEAAAAIAEQAAAAAAAEAAAAHAEUAAAAAAAEAAAAHAEMAAAAAAAEAAAAHAEQAAAAAAAEAAAAHAEIAAAAAAAEAAAAGAEMAAAAAAAEAAAAGAEEAAAAAAAEAAAAGAEIAAAAAAAEAAAAGAEAAAAAAAAEAAAAFAEEAAAAAAAEAAAAFAD8AAAAAAAEAAAAFAEAAAAAAAAEAAAAHAEYAAAABAAEAAAAGAEcAAAABAAEAAAAHAEgAAAABAAEAAAAHAEcAAAABAAEAAAAGAEQAAAABAAEAAAAFAEUAAAABAAEAAAAFAEQAAAABAAEAAAAFAEMAAAABAAEAAAAEAEEAAAABAAEAAAAEAEIAAAABAAEAAAADAEEAAAABAAEAAAAEAEAAAAABAAEAAAAGAEUAAAAAAAEAAAAGAEYAAAAAAAEAAAAFAEIAAAAAAAEAAAAEAEMAAAAAAAEAAAAGAEkAAAAAAAEAAAAGAEgAAAAAAAEAAAAFAEcAAAAAAAEAAAAFAEYAAAAAAAEAAAAEAEUAAAAAAAEAAAAEAEQAAAAAAAEAAAADAEMAAAAAAAEAAAADAEIAAAAAAAEAAAAFAEgAAAAAAAAAAAAEAEcAAAAAAAAAAAAEAEYAAAAAAAAAAAADAEUAAAAAAAAAAAAEAEkAAAAAAAAAAAAEAEgAAAAAAAAAAAADAEcAAAAAAAAAAAADAEYAAAAAAAAAAAAEAEoAAAAAAAAAAAADAEkAAAAAAAAAAAADAEgAAAAAAAAAAAACAEcAAAAAAAAAAAAkAAsAAAABAAEAAAAlAAwAAAABAAEAAAAlAAsAAAABAAEAAAAlAAoAAAABAAEAAAAjAAkAAAABAAEAAAAkAAgAAAABAAEAAAAjAAcAAAABAAEAAAAjAAgAAAABAAEAAAAiAAYAAAABAAEAAAAiAAUAAAABAAEAAAAiAAQAAAABAAEAAAAhAAUAAAABAAEAAAAkAAoAAAAAAAEAAAAkAAkAAAAAAAEAAAAiAAcAAAAAAAEAAAAjAAYAAAAAAAEAAAAmAAoAAAAAAAEAAAAlAAkAAAAAAAEAAAAlAAgAAAAAAAEAAAAkAAcAAAAAAAEAAAAkAAYAAAAAAAEAAAAjAAUAAAAAAAEAAAAjAAQAAAAAAAEAAAAiAAMAAAAAAAEAAAAlAAcAAAAAAAAAAAAmAAYAAAAAAAAAAAAlAAUAAAAAAAAAAAAmAAQAAAAAAAAAAAAmAAUAAAAAAAAAAAAlAAYAAAAAAAAAAAAkAAUAAAAAAAAAAAAkAAQAAAAAAAAAAAAlAAQAAAAAAAAAAAAlAAMAAAAAAAAAAAAlAAIAAAAAAAAAAAAkAAMAAAAAAAAAAAAHAEoAAAABAAAAAAAHAEkAAAABAAAAAAAIAEgAAAABAAAAAAAIAEcAAAABAAAAAAAJAEYAAAABAAAAAAAJAEUAAAABAAAAAAAKAEQAAAABAAAAAAAKAEMAAAABAAAAAAALAEIAAAABAAAAAAALAEEAAAABAAAAAAAMAEAAAAABAAAAAAAMAD8AAAABAAAAAAANAD4AAAABAAAAAAANAD0AAAABAAAAAAAOADwAAAABAAAAAAAOADsAAAABAAAAAAAPADoAAAABAAAAAAAPADkAAAABAAAAAAAQADgAAAABAAAAAAAQADcAAAABAAAAAAARADYAAAABAAAAAAARADUAAAABAAAAAAASADQAAAABAAAAAAASADMAAAABAAAAAAATADIAAAABAAAAAAATADEAAAABAAAAAAAUADAAAAABAAAAAAAUAC8AAAABAAAAAAAVAC4AAAABAAAAAAAVAC0AAAABAAAAAAAWACwAAAABAAAAAAAWACsAAAABAAAAAAAXACoAAAABAAAAAAAXACkAAAABAAAAAAAYACgAAAABAAAAAAAYACcAAAABAAAAAAAZACYAAAABAAAAAAAZACUAAAABAAAAAAAaACQAAAABAAAAAAAaACMAAAABAAAAAAAbACIAAAABAAAAAAAbACEAAAABAAAAAAAcACAAAAABAAAAAAAcAB8AAAABAAAAAAAdAB4AAAABAAAAAAAdAB0AAAABAAAAAAAeABwAAAABAAAAAAAeABsAAAABAAAAAAAfABoAAAABAAAAAAAfABkAAAABAAAAAAAgABgAAAABAAAAAAAgABcAAAABAAAAAAAhABYAAAABAAAAAAAhABUAAAABAAAAAAAiABQAAAABAAAAAAAiABMAAAABAAAAAAAjABIAAAABAAAAAAAjABEAAAABAAAAAAAkABAAAAABAAAAAAAkAA8AAAABAAAAAAAlAA4AAAABAAAAAAAlAA0AAAABAAAAAAAmAAwAAAABAAAAAAAmAAsAAAABAAAAAAAIAEYAAAABAAAAAAAIAEUAAAABAAAAAAAJAEQAAAABAAAAAAAJAEMAAAABAAAAAAAKAEIAAAABAAAAAAAKAEEAAAABAAAAAAALAEAAAAABAAAAAAALAD8AAAABAAAAAAAMAD4AAAABAAAAAAAMAD0AAAABAAAAAAANADwAAAABAAAAAAANADsAAAABAAAAAAAOADoAAAABAAAAAAAOADkAAAABAAAAAAAPADgAAAABAAAAAAAPADcAAAABAAAAAAAQADYAAAABAAAAAAAQADUAAAABAAAAAAARADQAAAABAAAAAAARADMAAAABAAAAAAASADIAAAABAAAAAAASADEAAAABAAAAAAATADAAAAABAAAAAAATAC8AAAABAAAAAAAUAC4AAAABAAAAAAAUAC0AAAABAAAAAAAVACwAAAABAAAAAAAVACsAAAABAAAAAAAWACoAAAABAAAAAAAWACkAAAABAAAAAAAXACgAAAABAAAAAAAXACcAAAABAAAAAAAYACYAAAABAAAAAAAYACUAAAABAAAAAAAZACQAAAABAAAAAAAZACMAAAABAAAAAAAaACIAAAABAAAAAAAaACEAAAABAAAAAAAbACAAAAABAAAAAAAbAB8AAAABAAAAAAAcAB4AAAABAAAAAAAcAB0AAAABAAAAAAAdABwAAAABAAAAAAAdABsAAAABAAAAAAAeABoAAAABAAAAAAAeABkAAAABAAAAAAAfABgAAAABAAAAAAAfABcAAAABAAAAAAAgABYAAAABAAAAAAAgABUAAAABAAAAAAAhABQAAAABAAAAAAAhABMAAAABAAAAAAAiABIAAAABAAAAAAAiABEAAAABAAAAAAAjABAAAAABAAAAAAAjAA8AAAABAAAAAAAkAA4AAAABAAAAAAAkAA0AAAABAAAAAAAFAEkAAAAAAAEAAAAFAEoAAAAAAAEAAAADAEQAAAAAAAEAAAACAEUAAAAAAAEAAAAmAAgAAAAAAAEAAAAmAAcAAAAAAAEAAAAjAAMAAAAAAAEAAAAkAAIAAAAAAAEAAAAGAEsAAAABAAAAAAAGAEwAAAABAAAAAAAFAE0AAAABAAAAAAAFAE4AAAABAAAAAAAGAEoAAAABAAAAAAAFAEsAAAABAAAAAAAFAEwAAAABAAAAAAAEAE0AAAABAAAAAAAEAEsAAAABAAAAAAAEAEwAAAABAAAAAAADAEsAAAABAAAAAAADAEoAAAABAAAAAAACAEkAAAABAAAAAAACAEgAAAABAAAAAAABAEcAAAABAAAAAAABAEYAAAABAAAAAAACAEMAAAABAAAAAAACAEQAAAABAAAAAAABAEUAAAABAAAAAAACAEYAAAABAAAAAAAAAEUAAAABAAAAAAABAEQAAAABAAAAAAABAEMAAAABAAAAAAACAEIAAAABAAAAAAACAEEAAAABAAAAAAADAEAAAAABAAAAAAADAD8AAAABAAAAAAAEAD4AAAABAAAAAAAEAD0AAAABAAAAAAAFADwAAAABAAAAAAAFADsAAAABAAAAAAAGADoAAAABAAAAAAAGADkAAAABAAAAAAAHADgAAAABAAAAAAAHADcAAAABAAAAAAAIADYAAAABAAAAAAAIADUAAAABAAAAAAAJADQAAAABAAAAAAAJADMAAAABAAAAAAAKADIAAAABAAAAAAAKADEAAAABAAAAAAALADAAAAABAAAAAAALAC8AAAABAAAAAAAMAC4AAAABAAAAAAAMAC0AAAABAAAAAAANACwAAAABAAAAAAANACsAAAABAAAAAAAOACoAAAABAAAAAAAOACkAAAABAAAAAAAPACgAAAABAAAAAAAPACcAAAABAAAAAAAQACYAAAABAAAAAAAQACUAAAABAAAAAAARACQAAAABAAAAAAARACMAAAABAAAAAAASACIAAAABAAAAAAASACEAAAABAAAAAAATACAAAAABAAAAAAATAB8AAAABAAAAAAAUAB4AAAABAAAAAAAUAB0AAAABAAAAAAAVABwAAAABAAAAAAAVABsAAAABAAAAAAAWABoAAAABAAAAAAAWABkAAAABAAAAAAAXABgAAAABAAAAAAAXABcAAAABAAAAAAAYABYAAAABAAAAAAAYABUAAAABAAAAAAAZABQAAAABAAAAAAAZABMAAAABAAAAAAAaABIAAAABAAAAAAAaABEAAAABAAAAAAAbABAAAAABAAAAAAAbAA8AAAABAAAAAAAcAA4AAAABAAAAAAAcAA0AAAABAAAAAAAdAAwAAAABAAAAAAAdAAsAAAABAAAAAAAeAAoAAAABAAAAAAAeAAkAAAABAAAAAAAfAAgAAAABAAAAAAAfAAcAAAABAAAAAAAgAAYAAAABAAAAAAAgAAUAAAABAAAAAAAhAAQAAAABAAAAAAAhAAMAAAABAAAAAAAiAAIAAAABAAAAAAAiAAEAAAABAAAAAAAjAAAAAAABAAAAAAAjAP//AAABAAAAAAAEAD8AAAABAAAAAAAFAD4AAAABAAAAAAAFAD0AAAABAAAAAAAGADwAAAABAAAAAAAGADsAAAABAAAAAAAHADoAAAABAAAAAAAHADkAAAABAAAAAAAIADgAAAABAAAAAAAIADcAAAABAAAAAAAJADYAAAABAAAAAAAJADUAAAABAAAAAAAKADQAAAABAAAAAAAKADMAAAABAAAAAAALADIAAAABAAAAAAALADEAAAABAAAAAAAMADAAAAABAAAAAAAMAC8AAAABAAAAAAANAC4AAAABAAAAAAANAC0AAAABAAAAAAAOACwAAAABAAAAAAAOACsAAAABAAAAAAAPACoAAAABAAAAAAAPACkAAAABAAAAAAAQACgAAAABAAAAAAAQACcAAAABAAAAAAARACYAAAABAAAAAAARACUAAAABAAAAAAASACQAAAABAAAAAAASACMAAAABAAAAAAATACIAAAABAAAAAAATACEAAAABAAAAAAAUACAAAAABAAAAAAAUAB8AAAABAAAAAAAVAB4AAAABAAAAAAAVAB0AAAABAAAAAAAWABwAAAABAAAAAAAWABsAAAABAAAAAAAXABoAAAABAAAAAAAXABkAAAABAAAAAAAYABgAAAABAAAAAAAYABcAAAABAAAAAAAZABYAAAABAAAAAAAZABUAAAABAAAAAAAaABQAAAABAAAAAAAaABMAAAABAAAAAAAbABIAAAABAAAAAAAbABEAAAABAAAAAAAcABAAAAABAAAAAAAcAA8AAAABAAAAAAAdAA4AAAABAAAAAAAdAA0AAAABAAAAAAAeAAwAAAABAAAAAAAeAAsAAAABAAAAAAAfAAoAAAABAAAAAAAfAAkAAAABAAAAAAAgAAgAAAABAAAAAAAgAAcAAAABAAAAAAAhAAYAAAABAAAAAAAnAAoAAAABAAAAAAAnAAkAAAABAAAAAAAoAAgAAAABAAAAAAAkAP7/AAABAAAAAAAkAP//AAABAAAAAAAlAAAAAAABAAAAAAAlAAEAAAABAAAAAAAmAAIAAAABAAAAAAAmAAMAAAABAAAAAAAnAAQAAAABAAAAAAAnAAUAAAABAAAAAAAoAAYAAAABAAAAAAAoAAcAAAABAAAAAAAnAAYAAAABAAAAAAAnAAcAAAABAAAAAAAmAAkAAAABAAAAAAAnAAgAAAABAAAAAAAkAAEAAAABAAAAAAAkAAAAAAABAAAAAAAjAAIAAAABAAAAAAAjAAEAAAABAAAAAAApAAgAAAABAAAAAAAoAAkAAAABAAAAAAAoAAoAAAABAAAAAAAnAAsAAAABAAAAAAAnAAwAAAABAAAAAAAmAA0AAAABAAAAAAAmAA4AAAABAAAAAAAlAA8AAAABAAAAAAAlABAAAAABAAAAAAAkABEAAAABAAAAAAAkABIAAAABAAAAAAAjABMAAAABAAAAAAAjABQAAAABAAAAAAAiABUAAAABAAAAAAAiABYAAAABAAAAAAAhABcAAAABAAAAAAAhABgAAAABAAAAAAAgABkAAAABAAAAAAAgABoAAAABAAAAAAAfABsAAAABAAAAAAAfABwAAAABAAAAAAAeAB0AAAABAAAAAAAeAB4AAAABAAAAAAAdAB8AAAABAAAAAAAdACAAAAABAAAAAAAcACEAAAABAAAAAAAcACIAAAABAAAAAAAbACMAAAABAAAAAAAbACQAAAABAAAAAAAaACUAAAABAAAAAAAaACYAAAABAAAAAAAZACcAAAABAAAAAAAZACgAAAABAAAAAAAYACkAAAABAAAAAAAYACoAAAABAAAAAAAXACsAAAABAAAAAAAXACwAAAABAAAAAAAWAC0AAAABAAAAAAAWAC4AAAABAAAAAAAVAC8AAAABAAAAAAAVADAAAAABAAAAAAAUADEAAAABAAAAAAAUADIAAAABAAAAAAATADMAAAABAAAAAAATADQAAAABAAAAAAASADUAAAABAAAAAAASADYAAAABAAAAAAARADcAAAABAAAAAAARADgAAAABAAAAAAAQADkAAAABAAAAAAAQADoAAAABAAAAAAAPADsAAAABAAAAAAAPADwAAAABAAAAAAAOAD0AAAABAAAAAAAOAD4AAAABAAAAAAANAD8AAAABAAAAAAANAEAAAAABAAAAAAAMAEEAAAABAAAAAAAMAEIAAAABAAAAAAALAEMAAAABAAAAAAALAEQAAAABAAAAAAAKAEUAAAABAAAAAAAKAEYAAAABAAAAAAAJAEcAAAABAAAAAAAJAEgAAAABAAAAAAAIAEkAAAABAAAAAAAIAEoAAAABAAAAAAAHAEsAAAABAAAAAAAHAEwAAAABAAAAAAAGAE0AAAABAAAAAAAGAE4AAAABAAAAAAAjAP3/AAABAAAAAAAjAP7/AAABAAAAAAAiAP//AAABAAAAAAAiAAAAAAABAAAAAAAhAAEAAAABAAAAAAAhAAIAAAABAAAAAAAgAAMAAAABAAAAAAAgAAQAAAABAAAAAAAfAAUAAAABAAAAAAAfAAYAAAABAAAAAAAeAAcAAAABAAAAAAAeAAgAAAABAAAAAAAdAAkAAAABAAAAAAAdAAoAAAABAAAAAAAcAAsAAAABAAAAAAAcAAwAAAABAAAAAAAbAA0AAAABAAAAAAAbAA4AAAABAAAAAAAaAA8AAAABAAAAAAAaABAAAAABAAAAAAAZABEAAAABAAAAAAAZABIAAAABAAAAAAAYABMAAAABAAAAAAAYABQAAAABAAAAAAAXABUAAAABAAAAAAAXABYAAAABAAAAAAAWABcAAAABAAAAAAAWABgAAAABAAAAAAAVABkAAAABAAAAAAAVABoAAAABAAAAAAAUABsAAAABAAAAAAAUABwAAAABAAAAAAATAB0AAAABAAAAAAATAB4AAAABAAAAAAASAB8AAAABAAAAAAASACAAAAABAAAAAAARACEAAAABAAAAAAARACIAAAABAAAAAAAQACMAAAABAAAAAAAQACQAAAABAAAAAAAPACUAAAABAAAAAAAPACYAAAABAAAAAAAOACcAAAABAAAAAAAOACgAAAABAAAAAAANACkAAAABAAAAAAANACoAAAABAAAAAAAMACsAAAABAAAAAAAMACwAAAABAAAAAAALAC0AAAABAAAAAAALAC4AAAABAAAAAAAKAC8AAAABAAAAAAAKADAAAAABAAAAAAAJADEAAAABAAAAAAAJADIAAAABAAAAAAAIADMAAAABAAAAAAAIADQAAAABAAAAAAAHADUAAAABAAAAAAAHADYAAAABAAAAAAAGADcAAAABAAAAAAAGADgAAAABAAAAAAAFADkAAAABAAAAAAAFADoAAAABAAAAAAAEADsAAAABAAAAAAAEADwAAAABAAAAAAADAD0AAAABAAAAAAADAD4AAAABAAAAAAACAD8AAAABAAAAAAACAEAAAAABAAAAAAABAEEAAAABAAAAAAABAEIAAAABAAAAAAAAAEMAAAABAAAAAAAAAEQAAAABAAAAAAAFAE8AAAABAAAAAAA=")
tile_set = SubResource("TileSet_c7pfh")
script = ExtResource("2_bsmyo")

[node name="PlayerSpawnPoint" type="Marker2D" parent="."]
position = Vector2(158, 528)

[node name="AISpawnPoint" type="Marker2D" parent="."]
position = Vector2(1100, 56)

[node name="BuildingSlot1" type="Marker2D" parent="."]
position = Vector2(134, 495)

[node name="BuildingSlot2" type="Marker2D" parent="."]
position = Vector2(180, 517)

[node name="BuildingSlot3" type="Marker2D" parent="."]
position = Vector2(224, 539)

[node name="BuildingSlot4" type="Marker2D" parent="."]
position = Vector2(270, 471)

[node name="BuildingSlot5" type="Marker2D" parent="."]
position = Vector2(450, 381)

[node name="BuildingSlot6" type="Marker2D" parent="."]
position = Vector2(629, 291)

[node name="BuildingSlot7" type="Marker2D" parent="."]
position = Vector2(810, 201)

[node name="BuildingSlot8" type="Marker2D" parent="."]
position = Vector2(990, 111)

[node name="BuildingSlot9" type="Marker2D" parent="."]
position = Vector2(1035, 43)

[node name="BuildingSlot10" type="Marker2D" parent="."]
position = Vector2(1080, 66)

[node name="BuildingSlot11" type="Marker2D" parent="."]
position = Vector2(1125, 89)

[node name="CheckpointContainer" type="Node2D" parent="."]

[node name="Checkpoint" parent="CheckpointContainer" instance=ExtResource("3_747ft")]
z_index = 1
position = Vector2(271, 473)
checkpoint_id = 1

[node name="Checkpoint2" parent="CheckpointContainer" instance=ExtResource("3_747ft")]
z_index = 1
position = Vector2(451, 383)
checkpoint_id = 2

[node name="Checkpoint3" parent="CheckpointContainer" instance=ExtResource("3_747ft")]
z_index = 1
position = Vector2(631, 293)
checkpoint_id = 3

[node name="Checkpoint4" parent="CheckpointContainer" instance=ExtResource("3_747ft")]
z_index = 1
position = Vector2(811, 203)
checkpoint_id = 4

[node name="Checkpoint5" parent="CheckpointContainer" instance=ExtResource("3_747ft")]
z_index = 1
position = Vector2(989, 113)
checkpoint_id = 5

[connection signal="update_checkpoint" from="CheckpointContainer/Checkpoint" to="." method="_on_checkpoint_update_checkpoint"]
[connection signal="update_checkpoint" from="CheckpointContainer/Checkpoint2" to="." method="_on_checkpoint_2_update_checkpoint"]
[connection signal="update_checkpoint" from="CheckpointContainer/Checkpoint3" to="." method="_on_checkpoint_3_update_checkpoint"]
[connection signal="update_checkpoint" from="CheckpointContainer/Checkpoint4" to="." method="_on_checkpoint_4_update_checkpoint"]
[connection signal="update_checkpoint" from="CheckpointContainer/Checkpoint5" to="." method="_on_checkpoint_5_update_checkpoint"]
